// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend;

option java_outer_classname = "RequestInfoProto";
option java_package = "com.google.aggregate.protos.shared.backend";

/**
 * The request info for the job requested by the operator.
 */
message RequestInfo {
  /** Unique identifier provided by the operator. */
  string job_request_id = 1;
  /** URL of the input data file. */
  string input_data_blob_prefix = 2;
  /** Bucket name to store the input data file. */
  string input_data_bucket_name = 3;
  /** URL of the output data file. */
  string output_data_blob_prefix = 4;
  /** Bucket name to store the output data file. */
  string output_data_bucket_name = 5;
  /** URL to notify the result. */
  string postback_url = 6;
  /** Data plane application specific parameters. */
  map<string, string> job_parameters = 7;
  /** The caller identity (email or service account in GCP). */
  string account_identity = 8;
  /** List of URLs to the input prefix data files. */
  repeated string input_data_blob_prefixes = 9;
}
